--- a/styles.css
+++ b/styles.css
@@ -61,16 +61,16 @@ html, body {
 }
 
 .button {
+	opacity: .25;
 	transform: perspective(500px) scale(.25);
 	font-size: 1.5em;
-	background-color: rgba(255,255,255,.15);
+	background-color: rgba(255,255,255,.5);
 	padding: 10px;
-	outline: 2px solid white;
-    outline-offset: 5px;
 	position: absolute;
-	margin-left: 16%;
+	margin-left: 5%;
 	top: 50%;
   	transform: translateY(-50%);
+  	border-radius: 50%;
 	z-index: 3;
 }
 
